Add custom queries (#71)
