# server/openapi_server/controllers/model_controller.py
@@ -6,6 +6,78 @@ from openapi_server.utils.vars import MODEL_TYPE_NAME, MODEL_TYPE_URI
 from openapi_server.models.model import Model  # noqa: E501
 from openapi_server import util
 
+def custom_model_index_get(label, custom_query_name=None, username=None):  # noqa: E501
+    """Get a Model
+
+    Gets the details of a single instance of a Model # noqa: E501
+
+    :param label: Label of NumericalIndex
+    :type label: str
+    :param custom_query_name: Name of the custom query
+    :type custom_query_name: str
+    :param username: Username to query
+    :type username: str
+
+    :rtype: Model
+    """
+
+
+    return get_resource(
+        custom_query_name=custom_query_name,
+        username=username,
+        label=label,
+        rdf_type_uri=MODEL_TYPE_URI,
+        rdf_type_name=MODEL_TYPE_NAME, 
+        kls=Model)
+
+def custom_model_intervention_get(label, custom_query_name=None, username=None):  # noqa: E501
+    """Get a Model
+
+    Gets the details of a single instance of a Model # noqa: E501
+
+    :param label: Label of intervation
+    :type label: str
+    :param custom_query_name: Name of the custom query
+    :type custom_query_name: str
+    :param username: Username to query
+    :type username: str
+
+    :rtype: Model
+    """
+
+
+    return get_resource(
+        custom_query_name=custom_query_name,
+        username=username,
+        label=label,
+        rdf_type_uri=MODEL_TYPE_URI,
+        rdf_type_name=MODEL_TYPE_NAME, 
+        kls=Model)
+
+def custom_model_region_get(label, custom_query_name=None, username=None):  # noqa: E501
+    """Get a Model
+
+    Gets the details of a single instance of a Model # noqa: E501
+
+    :param label: region to search
+    :type label: str
+    :param custom_query_name: Name of the custom query
+    :type custom_query_name: str
+    :param username: Username to query
+    :type username: str
+
+    :rtype: Model
+    """
+
+
+    return get_resource(
+        custom_query_name=custom_query_name,
+        username=username,
+        label=label,
+        rdf_type_uri=MODEL_TYPE_URI,
+        rdf_type_name=MODEL_TYPE_NAME, 
+        kls=Model)
+
 def models_get(username=None, label=None):  # noqa: E501
     """List all Model entities
 
